Bug 407456 - Tile and Cascade do not appear in the window menu.
Summary: Tile and Cascade do not appear in the window menu.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-12 12:33 UTC by Trevor Noble
Modified: 2019-05-17 08:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Trevor Noble 2019-05-12 12:33:46 UTC
SUMMARY
krita-4.2.0-alpha-220be8f-x86_64.appimage Tile and Cascade no show

STEPS TO REPRODUCE
Window>New View creates a duplicate view. 

OBSERVED RESULT
Tile and Cascade do not appear in the window menu. 

EXPECTED RESULT
Tile and Cascade should appear in the window menu. 

SOFTWARE/OS VERSIONS
Linux Mint Mate, 18.3 Sylvia
Athlon X4 950
8 Gig DDR4.

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-05-12 13:17:21 UTC
Thanks for the report, I can confirm the issue.
Comment 2 vanyossi 2019-05-17 05:49:51 UTC
Git commit 6f2f0e778c5333e1b1aa0d9b1dcd4578be41da78 by Ivan Yossi.
Committed on 17/05/2019 at 05:48.
Pushed by ivany into branch 'master'.

Update Menu after changing krita settings.

M  +1    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/6f2f0e778c5333e1b1aa0d9b1dcd4578be41da78
Comment 3 Halla Rempt 2019-05-17 08:13:02 UTC
Git commit 7f1492d935514cc4ebfa1923ccd6e8fca41face2 by Boudewijn Rempt, on behalf of Ivan Yossi.
Committed on 17/05/2019 at 08:12.
Pushed by rempt into branch 'krita/4.2'.

Update Menu after changing krita settings.

M  +1    -0    libs/ui/KisMainWindow.cpp

https://invent.kde.org/kde/krita/commit/7f1492d935514cc4ebfa1923ccd6e8fca41face2