Update Menu after changing krita settings.

BUG:407456